# Claude-Code-Multi-Provider-in-Rust

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  config.toml
docs/: ARCHITECTURE.md  USER_GUIDE.md
docs/superpowers/specs/: 2026-07-10-claude-multi-proxy-rust-design.md
src/: config.rs  error.rs  lib.rs  main.rs  model_command.rs  proxy.rs
tests/: proxy_integration.rs
