[package]
name = "claude-multi-proxy"
version = "0.1.0"
edition = "2021"
description = "Local reverse proxy routing Claude Code requests to multiple LLM providers with in-session /model switching"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
